# wasm-shell

./: Cargo.toml  LICENSE-APACHE  README.md
crates/bash_parser/: Cargo.toml
crates/bash_parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  tests.rs
crates/wasm_shell/: Cargo.toml
crates/wasm_shell/src/: builtins.rs  env.rs  error.rs  exec.rs  expand.rs  io.rs  lib.rs  registry.rs  shell.rs  tests.rs  vfs.rs  wasm.rs
npm/wasm_shell/: .gitignore  bun-interactive.ts  bun-test.ts  index.d.ts  package.json  wasm_shell.d.ts  wasm_shell_bg.wasm.d.ts
